fixed swiper overflow

--- a/scss/_swiper.scss
+++ b/scss/_swiper.scss
@@ -5,6 +5,7 @@
 }
 
 .swiper-container {
+    overflow: hidden;
     width: 600px;
     height: 250px;
 }
